--- a/ForeScore.WebMVC/Views/Course/Delete.cshtml
+++ b/ForeScore.WebMVC/Views/Course/Delete.cshtml
@@ -4,242 +4,247 @@
     ViewBag.Title = "Delete";
 }
 
-<div class="container">
-    <h2>Delete Course</h2>
+@using (Html.BeginForm())
+{
 
-    <br />
-    <div class="boxes">
-        <div class="row">
+    @Html.AntiForgeryToken()
+    <div class="container">
+        <h2>Delete Course</h2>
 
-            <div class="panel panel-primary col-lg-5">
-                <div class="panel panel-heading">Course Information</div>
-                <div class="panel-body">
-                    <dl class="dl-horizontal">
-
-                        @Html.HiddenFor(model => model.CourseId)
-
-                        <dt>
-                            Course Name:
-                        </dt>
-
-                        <dd>
-                            @Html.DisplayFor(model => model.Name)
-                        </dd>
-
-                        <dt>
-                            @Html.DisplayNameFor(model => model.Par):
-                        </dt>
-
-                        <dd>
-                            @Html.DisplayFor(model => model.Par)
-                        </dd>
-
-                        <dt>
-                            @Html.DisplayNameFor(model => model.Slope):
-                        </dt>
-
-                        <dd>
-                            @Html.DisplayFor(model => model.Slope)
-                        </dd>
-
-                        <dt>
-                            @Html.DisplayNameFor(model => model.Rating):
-                        </dt>
-
-                        <dd>
-                            @Html.DisplayFor(model => model.Rating)
-                        </dd>
-                    </dl>
-                    <br />
-                    <br />
-                    <br />
-                </div>
-
-            </div>
-            <div class="panel col-lg-2"></div>
-            <div class="panel panel-primary col-lg-5">
-                <div class="panel panel-heading">Contact Information</div>
-                <div class="panel-body">
-                    <dl class="dl-horizontal">
-                        <dt>
-                            @Html.DisplayNameFor(model => model.Address):
-                        </dt>
-
-                        <dd>
-                            @Html.DisplayFor(model => model.Address)
-                        </dd>
-
-                        <dt>
-                            @Html.DisplayNameFor(model => model.City):
-                        </dt>
-
-                        <dd>
-                            @Html.DisplayFor(model => model.City)
-                        </dd>
-
-                        <dt>
-                            @Html.DisplayNameFor(model => model.StateOfResidence):
-                        </dt>
-
-                        <dd>
-                            @Html.DisplayFor(model => model.StateOfResidence)
-                        </dd>
-
-                        <dt>
-                            @Html.DisplayNameFor(model => model.ZipCode):
-                        </dt>
-
-                        <dd>
-                            @Html.DisplayFor(model => model.ZipCode)
-                        </dd>
-
-                        <dt>
-                            @Html.DisplayNameFor(model => model.PhoneNumber):
-                        </dt>
-
-                        <dd>
-                            @Html.DisplayFor(model => model.PhoneNumber)
-                        </dd>
-
-                        <dt>
-                            @Html.DisplayNameFor(model => model.EmailAddress):
-                        </dt>
-
-                        <dd>
-                            @Html.DisplayFor(model => model.EmailAddress)
-                        </dd>
-
-                        <dt>
-                            @Html.DisplayNameFor(model => model.Website):
-                        </dt>
-
-                        <dd>
-                            @Html.DisplayFor(model => model.Website)
-                        </dd>
-
-                    </dl>
-                </div>
-            </div>
-
-        </div>
-
-
-        <div class="row">
-            <div class="panel panel-primary col-lg-12">
-                <div class="panel panel-heading">Front Nine</div>
-                <div class="panel-body">
-                    <table class="table table-bordered">
-                        <thead>
-                            <tr>
-                                <th class="hole" scope="col">
-                                    Hole
-                                </th>
-                                @for (int i = 0; i < Model.FrontNine.Count; i++)
-                                {
-                                    <th>
-                                        @Html.DisplayFor(model => Model.FrontNine[i].HoleNumber, new { htmlAttributes = new { @class = "form-control", } })
-                                    </th>
-                                }
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <th class="par" scope="col">
-                                    Par
-                                </th>
-                                @for (int i = 0; i < Model.FrontNine.Count; i++)
-                                {
-                                    <td>
-                                        @Html.DisplayFor(model => Model.FrontNine[i].Par, new { htmlAttributes = new { @class = "form-control", } })
-                                    </td>
-                                }
-                            </tr>
-
-                            <tr>
-                                <th class="distance" scope="col">
-                                    Distance (Yards)
-                                </th>
-                                @for (int i = 0; i < Model.FrontNine.Count; i++)
-                                {
-                                    <td>
-                                        @Html.DisplayFor(model => Model.FrontNine[i].Distance, new { htmlAttributes = new { @class = "form-control", } })
-                                    </td>
-                                }
-                            </tr>
-                        </tbody>
-
-                    </table>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="panel panel-primary col-lg-12">
-                <div class="panel panel-heading">Back Nine</div>
-                <div class="panel-body">
-                    <table class="table table-bordered">
-                        <thead>
-                            <tr>
-                                <th class="hole" scope="col">
-                                    Hole
-                                </th>
-                                @for (int i = 0; i < Model.BackNine.Count; i++)
-                                {
-                                    <th>
-                                        @Html.DisplayFor(model => Model.BackNine[i].HoleNumber, new { htmlAttributes = new { @class = "form-control", } })
-                                    </th>
-                                }
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <th class="par" scope="col">
-                                    Par
-                                </th>
-                                @for (int i = 0; i < Model.BackNine.Count; i++)
-                                {
-                                    <td>
-                                        @Html.DisplayFor(model => Model.BackNine[i].Par, new { htmlAttributes = new { @class = "form-control", } })
-                                    </td>
-                                }
-                            </tr>
-
-                            <tr>
-                                <th class="distance" scope="col">
-                                    Distance (Yards)
-                                </th>
-                                @for (int i = 0; i < Model.BackNine.Count; i++)
-                                {
-                                    <td>
-                                        @Html.DisplayFor(model => Model.BackNine[i].Distance, new { htmlAttributes = new { @class = "form-control", } })
-                                    </td>
-                                }
-                            </tr>
-                        </tbody>
-
-                    </table>
-                </div>
-            </div>
-        </div>
         <br />
-        <div class="row">
-            <div class="col-lg-5">
-                <a href="@Url.Action("Index", "Course", new { id = Model.CourseId })"
-                   id="sample_editable_1_new"
-                   class="btn btn-block btn-info col-lg-2">
-                    Discard Delete
-                </a>
+        <div class="boxes">
+            <div class="row">
+
+                <div class="panel panel-primary col-lg-5">
+                    <div class="panel panel-heading">Course Information</div>
+                    <div class="panel-body">
+                        <dl class="dl-horizontal">
+
+                            @Html.HiddenFor(model => model.CourseId)
+
+                            <dt>
+                                Course Name:
+                            </dt>
+
+                            <dd>
+                                @Html.DisplayFor(model => model.Name)
+                            </dd>
+
+                            <dt>
+                                @Html.DisplayNameFor(model => model.Par):
+                            </dt>
+
+                            <dd>
+                                @Html.DisplayFor(model => model.Par)
+                            </dd>
+
+                            <dt>
+                                @Html.DisplayNameFor(model => model.Slope):
+                            </dt>
+
+                            <dd>
+                                @Html.DisplayFor(model => model.Slope)
+                            </dd>
+
+                            <dt>
+                                @Html.DisplayNameFor(model => model.Rating):
+                            </dt>
+
+                            <dd>
+                                @Html.DisplayFor(model => model.Rating)
+                            </dd>
+                        </dl>
+                        <br />
+                        <br />
+                        <br />
+                    </div>
+
+                </div>
+                <div class="panel col-lg-2"></div>
+                <div class="panel panel-primary col-lg-5">
+                    <div class="panel panel-heading">Contact Information</div>
+                    <div class="panel-body">
+                        <dl class="dl-horizontal">
+                            <dt>
+                                @Html.DisplayNameFor(model => model.Address):
+                            </dt>
+
+                            <dd>
+                                @Html.DisplayFor(model => model.Address)
+                            </dd>
+
+                            <dt>
+                                @Html.DisplayNameFor(model => model.City):
+                            </dt>
+
+                            <dd>
+                                @Html.DisplayFor(model => model.City)
+                            </dd>
+
+                            <dt>
+                                @Html.DisplayNameFor(model => model.StateOfResidence):
+                            </dt>
+
+                            <dd>
+                                @Html.DisplayFor(model => model.StateOfResidence)
+                            </dd>
+
+                            <dt>
+                                @Html.DisplayNameFor(model => model.ZipCode):
+                            </dt>
+
+                            <dd>
+                                @Html.DisplayFor(model => model.ZipCode)
+                            </dd>
+
+                            <dt>
+                                @Html.DisplayNameFor(model => model.PhoneNumber):
+                            </dt>
+
+                            <dd>
+                                @Html.DisplayFor(model => model.PhoneNumber)
+                            </dd>
+
+                            <dt>
+                                @Html.DisplayNameFor(model => model.EmailAddress):
+                            </dt>
+
+                            <dd>
+                                @Html.DisplayFor(model => model.EmailAddress)
+                            </dd>
+
+                            <dt>
+                                @Html.DisplayNameFor(model => model.Website):
+                            </dt>
+
+                            <dd>
+                                @Html.DisplayFor(model => model.Website)
+                            </dd>
+
+                        </dl>
+                    </div>
+                </div>
+
             </div>
 
-            <div class=" col-lg-2"></div>
-            @using (Html.BeginForm())
-            {
-                <div class="col-lg-5">
-                    <input type="submit" value="Delete" class="btn btn-danger col-lg-2" /> |
+
+            <div class="row">
+                <div class="panel panel-primary col-lg-12">
+                    <div class="panel panel-heading">Front Nine</div>
+                    <div class="panel-body">
+                        <table class="table table-bordered">
+                            <thead>
+                                <tr>
+                                    <th class="hole" scope="col">
+                                        Hole
+                                    </th>
+                                    @for (int i = 0; i < Model.FrontNine.Count; i++)
+                                    {
+                                        <th>
+                                            @Html.DisplayFor(model => Model.FrontNine[i].HoleNumber, new { htmlAttributes = new { @class = "form-control", } })
+                                        </th>
+                                    }
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th class="par" scope="col">
+                                        Par
+                                    </th>
+                                    @for (int i = 0; i < Model.FrontNine.Count; i++)
+                                    {
+                                        <td>
+                                            @Html.DisplayFor(model => Model.FrontNine[i].Par, new { htmlAttributes = new { @class = "form-control", } })
+                                        </td>
+                                    }
+                                </tr>
+
+                                <tr>
+                                    <th class="distance" scope="col">
+                                        Distance (Yards)
+                                    </th>
+                                    @for (int i = 0; i < Model.FrontNine.Count; i++)
+                                    {
+                                        <td>
+                                            @Html.DisplayFor(model => Model.FrontNine[i].Distance, new { htmlAttributes = new { @class = "form-control", } })
+                                        </td>
+                                    }
+                                </tr>
+                            </tbody>
+
+                        </table>
+                    </div>
                 </div>
-            }
+            </div>
+            <div class="row">
+                <div class="panel panel-primary col-lg-12">
+                    <div class="panel panel-heading">Back Nine</div>
+                    <div class="panel-body">
+                        <table class="table table-bordered">
+                            <thead>
+                                <tr>
+                                    <th class="hole" scope="col">
+                                        Hole
+                                    </th>
+                                    @for (int i = 0; i < Model.BackNine.Count; i++)
+                                    {
+                                        <th>
+                                            @Html.DisplayFor(model => Model.BackNine[i].HoleNumber, new { htmlAttributes = new { @class = "form-control", } })
+                                        </th>
+                                    }
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th class="par" scope="col">
+                                        Par
+                                    </th>
+                                    @for (int i = 0; i < Model.BackNine.Count; i++)
+                                    {
+                                        <td>
+                                            @Html.DisplayFor(model => Model.BackNine[i].Par, new { htmlAttributes = new { @class = "form-control", } })
+                                        </td>
+                                    }
+                                </tr>
+
+                                <tr>
+                                    <th class="distance" scope="col">
+                                        Distance (Yards)
+                                    </th>
+                                    @for (int i = 0; i < Model.BackNine.Count; i++)
+                                    {
+                                        <td>
+                                            @Html.DisplayFor(model => Model.BackNine[i].Distance, new { htmlAttributes = new { @class = "form-control", } })
+                                        </td>
+                                    }
+                                </tr>
+                            </tbody>
+
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <br />
+            <div class="row">
+                <div class="col-lg-5">
+                    <a href="@Url.Action("Index", "Course")"
+                       class="btn btn-block btn-info col-lg-2">
+                        Discard Delete
+                    </a>
+                </div>
+
+                <div class=" col-lg-2"></div>
+                <div class="col-lg-5">
+
+                    <button type="submit" value="Delete" class="btn btn-block btn-danger col-lg-2">Delete</button>
+
+                </div>
+
+            </div>
+
         </div>
     </div>
-</div>
+}
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
