--- a/ForeScore.WebMVC/Views/Round/Index.cshtml
+++ b/ForeScore.WebMVC/Views/Round/Index.cshtml
@@ -13,7 +13,7 @@
             Add A New Round
         </a>
     </div>
-    <div class="panel-heading col-lg-3"></div>
+    <div class="col-lg-3"></div>
 
     <div class="row col-lg-12">
         <div class="panel panel-default">
