--- a/ForeScore.WebMVC/Views/Follow/Index.cshtml
+++ b/ForeScore.WebMVC/Views/Follow/Index.cshtml
@@ -4,9 +4,9 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
 
 <div class="container">
+    <h2>Social Index</h2>
     <div class="panel-heading">
         <a href="/Follow/Create" class="btn btn-primary btn-block">
             Create New Follow
