--- a/ForeScore.WebMVC/Views/Course/Create.cshtml
+++ b/ForeScore.WebMVC/Views/Course/Create.cshtml
@@ -14,6 +14,8 @@
 
         <br />
 
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
         <div class="row">
 
             <div class="panel panel-primary col-lg-5">
