--- a/ForeScore.WebMVC/Views/Follow/Delete.cshtml
+++ b/ForeScore.WebMVC/Views/Follow/Delete.cshtml
@@ -4,45 +4,54 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+    <div class="container">
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>FollowingListItem</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
+        <h2>Remove a Follow</h2>
 
-        <dd>
-            @Html.DisplayFor(model => model.Email)
-        </dd>
+        <div class="row">
 
-        <dt>
-            @Html.DisplayNameFor(model => model.FullName)
-        </dt>
+            <div class="panel panel-primary col-lg-12">
+                <div class="panel panel-heading">Follow Information</div>
+                <div class="panel-body form-horizontal">
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.FullName, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.DisplayFor(model => model.FullName, new { htmlAttributes = new { @class = "form-control" } })
+                        </div>
+                    </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.FullName)
-        </dd>
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.DisplayFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                        </div>
+                    </div>
 
-        @Html.HiddenFor(model => model.UserId)
-
-        @Html.HiddenFor(model => model.FollowingId)
-
-    </dl>
-
-    @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+                </div>
+            </div>
         </div>
-    }
-</div>
+
+
+        <div class="row">
+            <div class="col-lg-5">
+                <a href="@Url.Action("Index", "Follow")"
+                   class="btn btn-block btn-info col-lg-2">
+                    Discard Follow Delete
+                </a>
+            </div>
+            <div class=" col-lg-2"></div>
+            <div class="col-lg-5">
+
+                <button type="submit" value="Delete" class="btn btn-block btn-success col-lg-2">Delete Follow</button>
+
+            </div>
+        </div>
+    </div>
+}
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
