--- a/ForeScore.WebMVC/Views/Round/SelectCourse.cshtml
+++ b/ForeScore.WebMVC/Views/Round/SelectCourse.cshtml
@@ -8,6 +8,8 @@
 {
     @Html.AntiForgeryToken()
 
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
     <div class="container">
         <h2>Log A Round</h2>
 
