--- a/ForeScore.WebMVC/Views/Shared/_Layout.cshtml
+++ b/ForeScore.WebMVC/Views/Shared/_Layout.cshtml
@@ -16,14 +16,18 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("ForeScore", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("My Profile", "Index", "UserCareer")</li>
+                    <li>@Html.ActionLink("Rounds", "Index", "Round")</li>
+                    <li>@Html.ActionLink("Courses", "Index", "Course")</li>
+                    <li>@Html.ActionLink("Tee Times", "Index", "TeeTime")</li>
+                    <li>@Html.ActionLink("Social", "Index", "Follow")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
